<resources>
    <string name="app_name">Wallet</string>

    <string name="home_list_header">\u0020LATEST SPENDS</string>

    <string name="global_zero">0</string>
    <string name="global_CNY">CNY</string>
    <string name="global_CNY_ZH">%s 元</string>
    <string name="income_money">+ %s 元</string>
    <string name="global_undo">UNDO</string>
    <string name="global_delete">删除</string>
    <string name="global_add">新增</string>

    <string name="income">收入</string>
    <string name="expense">支出</string>
    <string name="type">类型</string>

    <string name="today">今天 %s</string>
    <string name="yesterday">昨天 %s</string>

    <string name="drawer_expense">月支出 : </string>
    <string name="drawer_income">月收入 : </string>
    <string name="drawer_positive_diff">+ %s</string>
    <string name="drawer_negative_diff">- %s</string>
    <string name="menu_title">设置</string>
    <string name="menu_analyze">统计分析</string>
    <string name="menu_cat">类别管理</string>
    <string name="menu_tag">标签管理</string>
    <string name="menu_notification">通知设置</string>
    <string name="menu_schedule">定时记账</string>
    <string name="menu_info">关于</string>

    <string name="description_holder">No Description</string>
    <string name="hint_enter_cat_name">输入类别名称</string>

    <string name="msg_price_overflow">不能再多了~土豪!我们做朋友吧!（¯﹃¯）口水</string>
    <string name="msg_undo_delete_bill">撤销删除?</string>
    <string name="msg_success_delete_cat">删除成功!</string>
    <string name="msg_success_add_cat">新增成功!</string>

    <string name="alert_cat_select_nothing">没有选中任何东东~</string>
    <string name="alert_cat_name_length_illegal">类别名称不能为空, 不能超过10个字符~</string>
</resources>
