<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_sub_item_1"
        android:icon="@drawable/ic_multiline_chart_white_24dp"
        android:title="@string/menu_analyze"/>
    <item
        android:id="@+id/navigation_sub_item_2"
        android:icon="@drawable/ic_widgets_white_24dp"
        android:title="@string/menu_cat"/>
    <item
        android:id="@+id/navigation_sub_item_3"
        android:icon="@drawable/ic_tag_white_24dp"
        android:title="@string/menu_tag"/>
    <item
        android:id="@+id/navigation_sub_item_4"
        android:icon="@drawable/ic_notifications_paused_white_24dp"
        android:title="@string/menu_notification"/>
    <item
        android:id="@+id/navigation_sub_item_5"
        android:icon="@drawable/ic_schedule_white_24dp"
        android:title="@string/menu_schedule"/>
    <item
        android:id="@+id/navigation_sub_item_6"
        android:icon="@drawable/ic_feedback_white_24dp"
        android:title="@string/menu_info"/>
</menu>