<?xml version="1.0" encoding="utf-8"?>
<com.assistne.aswallet.customview.SlideLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_height="260dp"
    android:background="@color/green_500"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:clipChildren="false"
        android:clipToPadding="false"
        >
        <RelativeLayout
            android:id="@+id/bill_info_span_type"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/transparent"
            android:clipChildren="false"
            android:clipToPadding="false"
            >
            <ImageView
                android:id="@+id/bill_info_division"
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:background="@android:color/white"
                android:layout_centerInParent="true"
                />
            <Button
                android:id="@+id/bill_info_btn_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:textSize="24sp"
                android:textColor="@color/selector_btn_text"
                android:layout_toStartOf="@id/bill_info_division"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_alignBaseline="@id/bill_info_division"
                android:layout_centerVertical="true"
                />
            <Button
                android:id="@+id/bill_info_btn_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:textSize="24sp"
                android:textColor="@color/selector_btn_text"
                android:layout_toEndOf="@id/bill_info_division"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:background="@android:color/transparent"
            >
            <TextView
                android:id="@+id/bill_info_text_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/material_margin_16"
                android:text="@string/global_CNY"
                android:textSize="34sp"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-light"
                />
            <me.grantland.widget.AutofitTextView
                android:id="@+id/bill_info_text_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/bill_info_text_currency"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="@dimen/material_margin_16"
                android:layout_centerVertical="true"
                android:gravity="end|center_vertical"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/global_zero"
                android:textSize="112sp"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-light"
                />
            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/bill_detail_span_tag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/material_margin_16"
                android:background="@color/green_500"
                android:visibility="invisible"
                app:justifyContent="flex_start"
                app:flexWrap="wrap"
                app:alignItems="flex_start"
                app:alignContent="flex_start"
                android:clickable="true"
                />
            <!-- 金额的镜像, 用来实现动画 -->
            <TextView
                android:id="@+id/bill_info_txt_price_mirror"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/bill_info_text_currency"
                android:layout_marginEnd="8dp"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-light"
                android:gravity="end|center_vertical"
                tools:text="10"
                tools:textSize="112sp"
                android:visibility="gone"
                />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/bill_info_division2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"
                />

            <ImageView
                android:id="@+id/bill_info_img_tag"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="8dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_tag"
                android:background="?attr/selectableItemBackground"
            />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/bill_info_edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/bill_info_img_tag"
                android:layout_marginStart="16dp"
                android:hint="Description"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="Description"
                app:met_hideUnderline="true"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabelTextSize="14sp"
                android:singleLine="true"
                app:met_textColor="@android:color/white"
                app:met_textColorHint="@android:color/white"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/bill_info_division2"
                android:layout_marginEnd="16dp">
                <LinearLayout
                    android:id="@+id/bill_info_vg_category"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/ripple_transparent_bg"
                    android:clickable="true"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/type"
                        android:textSize="14sp"
                        android:textColor="@color/green_200"
                        android:fontFamily="sans-serif-light"
                        />
                    <TextView
                        android:id="@+id/bill_info_text_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        tools:text="餐饮"
                        android:textSize="18sp"
                        android:textColor="@android:color/white"
                        android:fontFamily="sans-serif-light"
                        />
                </LinearLayout>
            </FrameLayout>
        </RelativeLayout>
</com.assistne.aswallet.customview.SlideLayout>